--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,13 @@
 
     <application
         android:allowBackup="true"
-
         android:icon="@drawable/todo_app_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".screens.RegisterActivity"></activity>
+        <activity android:name=".screens.ProfileActivity"></activity>
+        <activity android:name=".screens.RegisterActivity" />
         <activity android:name=".screens.SignInActivity" />
         <activity android:name=".screens.Splash_Activity">
             <intent-filter>
